# django-qlab

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.claude/: launch.json
.local-consumer/: db.sqlite3  manage.py
.local-consumer/consumer_config/: asgi.py  settings.py  urls.py  wsgi.py
.local-consumer/sampleapp/: admin.py  models.py
.local-consumer/sampleapp/management/commands/: seed_consumer_data.py
.local-consumer/sampleapp/migrations/: 0001_initial.py
.local-demo/: README.txt  db.sqlite3  manage.py
.local-demo/demo_config/: settings.py  urls.py  wsgi.py
.local-demo/demoapp/: admin.py  middleware.py  models.py
.local-demo/demoapp/management/commands/: seed_demo_data.py
.local-demo/demoapp/migrations/: 0001_initial.py
django_qlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: release-notes-v0.3.0.md  release-process.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: ContentSidebar.css  ContentSidebar.tsx  NavSidebar.css  NavSidebar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.css  HomePage.tsx  PlaceholderPage.css  PlaceholderPage.tsx  QueriesPage.css  QueriesPage.tsx  WorkspacePages.css  WorkspacePages.tsx
frontend/src/styles/: globals.css
qlab/: __init__.py  admin.py  api_views.py  apps.py  helpers.py  mixins.py  model_validation.py  models.py  pydantic_filters.py  serializers.py  settings.py  urls.py  views.py
qlab/migrations/: 0001_initial.py
qlab/static/qlab/: index.html  qlab.css  qlab.js
qlab/templates/qlab/: index.html
scripts/: build_package_ui.sh  prepare_release.sh  publish_pypi.sh
