[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-qlab"
version = "0.2.2"
description = "Dynamic query API for Django REST Framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tabea Hoehne"}
]
keywords = ["django", "rest", "api", "query", "filter", "metadata"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "Django>=4.0",
    "djangorestframework>=3.14",
    "pydantic>=2.0",
    "drf-spectacular>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black>=23.0",
    "ruff>=0.1",
    "pre-commit>=4.0",
    "build>=1.2",
    "twine>=5.1",
]

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = """
(
  qlab/static/qlab/.*|
  build/.*|
  django_qlab\\.egg-info/.*|
  frontend/.*|
  docs/.*\\.svg
)
"""

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [
    "build",
    "django_qlab.egg-info",
    "frontend",
    "qlab/static/qlab",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools.package-data]
qlab = [
    "templates/qlab/*.html",
    "static/qlab/*.js",
    "static/qlab/*.css",
    "static/qlab/assets/*",
]

[project.urls]
Homepage = "https://github.com/tabeahoehne132/django-qlab"
Documentation = "https://github.com/tabeahoehne132/django-qlab#readme"
Repository = "https://github.com/tabeahoehne132/django-qlab"
